# websocket

./: .dockerignore  .env.example  .env.local  Cargo.toml  Dockerfile  README.md  check-and-test.sh
.cursor/rules/: cargo-docker.mdc
.github/workflows/: ci.yml
src/: auth.rs  config.rs  main.rs  room.rs  ws.rs
