[package]
name = "websocket-server"
version = "0.1.0"
edition = "2021"
description = "WebSocket server with Kinde auth and room model (name + password)"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "10"
jwks = "0.5"
bcrypt = "0.17"
futures-util = { version = "0.3", features = ["sink"] }
uuid = { version = "1.11", features = ["v4"] }
thiserror = "2"
anyhow = "1"
reqwest = { version = "0.12", default-features = true }
